--- a/static/html/upload.html
+++ b/static/html/upload.html
@@ -13,14 +13,14 @@
             <div class="col-md-8 col-md-offset-2">
                 <h1 style="text-align: center">EFP Online Judge</h1>
                 <p class="lead" style="text-align: center">Element Fill-in-blank Problem Online Judge</p>
-                <form role="form">
+                <form role="form" method="post" action="teacher?action=upload" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="title" style="font-family: 'Adobe 黑体 Std R'">Problem Title</label>
                         <input type="text" class="form-control" name="title" placeholder="Please input problem title.">
                     </div>
                     <div class="form-group">
-                        <label for="theme" style="font-family: 'Adobe 黑体 Std R'">Themes</label>
-                        <input type="text" class="form-control" name="theme" placeholder="Maximum 5 Labels.">
+                        <label for="themes" style="font-family: 'Adobe 黑体 Std R'">Themes</label>
+                        <input type="text" class="form-control" name="themes" placeholder="Maximum 5 Labels.">
                         <p class="help-block">Refer to id-theme table and separate them using commas.</p>
                     </div>
                     <div class="form-group">
@@ -34,14 +34,17 @@
                     </div>
                     <div class="form-group">
                         <label for="test-cases">Test Cases</label>
-                        <input type="file" name="test-cases" accept=".rar">
-                        <p class="help-block">Compress test cases using rar.</p>
+                        <input type="file" name="test-cases" accept=".zip">
+                        <p class="help-block">Compress test cases using zip format.</p>
                     </div>
                     <div class="form-group">
                         <label for="difficulty">Difficulty</label><br>
                         <input type="number" name="difficulty">
                         <p class="help-block">Maximum difficulty is 100.</p>
                     </div>
+                    <p>
+                        <input id="upload" type="submit" class="form-control btn btn-warning" value="UPLOAD"/>
+                    </p>
                 </form>
             </div>
         </div>
