--- a/static/html/dashboard.html
+++ b/static/html/dashboard.html
@@ -8,9 +8,30 @@
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css" rel="stylesheet" >
 </head>
 <body>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-hidden="true">
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel" align="center">
+                        ANSWER
+                    </h4>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">
+                        CLOSE
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8">
@@ -34,74 +55,226 @@
                 <div>
                     <h4>STU: {{ studentNum }}   TEACHER: {{ teacherNum }}   PROBLEM: {{ problemNum }}</h4>
                     <input id="querystring" class="form-control" placeholder="Input the query string." style="width: 40%; float: left">
-                    <div id="userDiv" style="float: left">
-                        <select id="userSelect" style="border-radius: 3px; width: 100px; height: 34px">
+                    <div id="roleDiv" style="float: left">
+                        <select id="roleSelect" style="border-radius: 3px; width: 100px; height: 34px">
                             <option value="teacher">Teacher</option>
                             <option value="student">Student</option>
                             <option value="problem">Problem</option>
                         </select>
                     </div>
 
-                    <div id="byDiv" style="float:left;">
-                        <select id="bySelect" style="border-radius: 3px; width: 100px; height: 34px">
+                    <div id="wayDiv" style="float:left;">
+                        <select id="waySelect" style="border-radius: 3px; width: 100px; height: 34px">
                             <option value="email" class="option teacher-option">Email</option>
                             <option value="nickname" class="option teacher-option">Nickname</option>
                         </select>
                     </div>
 
-                    <input id="signin" type="submit" class="form-control btn btn-primary" value="GO" style="width: 10%; float: right"/>
+                    <input id="search" type="submit" class="form-control btn btn-primary" value="GO" style="width: 10%; float: right"/>
                 </div>
                 <a name="teacher"></a>
-                <div>
+                <div style="float: left">
+                    <h4>Teacher Area</h4>
+                    <table style="table-layout: fixed;" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th colspan="3">Email</th>
+                                <th colspan="5">Password</th>
+                                <th colspan="2">Nickname</th>
+                                <th colspan="1">Delete</th>
+                            </tr>
+                        </thead>
+                        <tbody id="teacherTable">
 
+                        </tbody>
+                    </table>
                 </div>
                 <a name="student"></a>
-                <div>
+                <div style="float: left">
+                    <h4>Student Area</h4>
+                    <table style="table-layout: fixed;" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th colspan="3">Email</th>
+                                <th colspan="5">Password</th>
+                                <th colspan="2">Nickname</th>
+                                <th colspan="1">Score</th>
+                                <th colspan="1">Delete</th>
+                            </tr>
+                        </thead>
+                        <tbody id="studentTable">
 
+                        </tbody>
+                    </table>
                 </div>
                 <a name="problem"></a>
-               <div>
+                <div style="float: left">
+                    <h4>Problem Area</h4>
+                    <table style="table-layout: fixed;" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th colspan="1">Id</th>
+                                <th colspan="2">Author</th>
+                                <th colspan="3">Title</th>
+                                <th colspan="1">Average</th>
+                                <th colspan="1">Score</th>
+                                <th colspan="1">Answer</th>
+                                <th colspan="1">Delete</th>
+                            </tr>
+                        </thead>
+                        <tbody id="problemTable">
 
-               </div>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 <script>
-    $('#signin').click(function () {
-        console.log($('#querystring').val())
-        console.log($('#userSelect').val())
-        console.log($('#bySelect').val())
+    $('#search').click(function () {
+        $.ajax({
+            url: 'admin?action=search',
+            method: 'POST',
+            contentType: 'json',
+            data: JSON.stringify({
+                query: $('#querystring').val(),
+                role: $('#roleSelect').val(),
+                way: $('#waySelect').val()
+            }),
+            success: function (res) {
+                if(res.status == 1) {
+                    if(res.role == 'teacher') {
+                        let html = $('#teacherTable').html()
+                        for(let i=0; i<res.data.length; i++) {
+                            let item = res.data[i]
+                            html += `<tr id=${item.email}>
+                                        <th scope="row" colspan="3" title="${ item.email }">${ item.email }</th>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="5" title="${ item.password }">${ item.password }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="2" title="${ item.nickname }">${ item.nickname }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="1" title="Delete">
+                                            <a target="_parent" class="btn btn-info btn-sm" href="javascrit: void(0);" onclick="delete_('teacher', ${ item.email })">
+                                                <span class="glyphicon glyphicon-minus">DELETE</span>
+                                            </a>
+                                        </td>
+                                    </tr>`
+                        }
+                        $('#teacherTable').html(html)
+                    } else if(res.role == 'student') {
+                        let html = $('#studentTable').html()
+                        for(let i=0; i<res.data.length; i++) {
+                            let item = res.data[i]
+                            html += `<tr id=${item.email}>
+                                        <th scope="row" colspan="3" title="${ item.email }">${ item.email }</th>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="5" title="${ item.password }">${ item.password }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="2" title="${ item.nickname }">${ item.nickname }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="1" title="${ item.score }">${ item.score }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="1" title="Delete">
+                                            <a target="_parent" class="btn btn-info btn-sm" href="javascrit: void(0);" onclick="delete_('student', ${item.email})>
+                                                <span class="glyphicon glyphicon-minus">DELETE</span>
+                                            </a>
+                                        </td>
+                                    </tr>`
+                        }
+                        $('#studentTable').html(html)
+                    } else if(res.role == 'problem') {
+                        let html = $('#problemTable').html()
+                        for(let i=0; i<res.data.length; i++) {
+                            let item = res.data[i]
+                            html += `<tr id=${item.id}>
+                                        <th scope="row" colspan="1" title="${ item.id }">${ item.id }</th>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="2" title="${ item.author }">${ item.author }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="3" title="${ item.title }">${ item.title }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="1" title="${ item.averageScore }">${ item.averageScore }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="1" title="${ item.score }">${ item.score }</td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="1" title="Answer">
+                                            <a target="_parent" class="btn btn-info btn-sm" href="javascrit:void(0);" onclick="lookAnswer(${ item.id })" data-toggle="modal" data-target="#myModal">
+                                                <span class="glyphicon glyphicon-eye-open">Answer</span>
+                                            </a>
+                                        </td>
+                                        <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" colspan="1" title="Delete">
+                                            <a target="_parent" class="btn btn-info btn-sm" href="javascrit:void(0);" onclick="delete_('problem', ${ item.id })">
+                                                <span class="glyphicon glyphicon-minus">DELETE</span>
+                                            </a>
+                                        </td>
+                                    </tr>`
+                        }
+                        $('#problemTable').html(html)
+                    }
+
+
+
+
+                } else {
+                    self.location = 'admin'
+                    alert(res.msg)
+                }
+            }
+        })
     })
-    $('#userSelect').change(function () {
+    $('#roleSelect').change(function () {
         let html = ''
-        let current = $('#userSelect').val()
+        let current = $('#roleSelect').val()
         switch(current) {
             case 'teacher':
-                html = `<select id="bySelect" style="border-radius: 3px; width: 100px; height: 34px">
+                html = `<select id="waySelect" style="border-radius: 3px; width: 100px; height: 34px">
                     <option value="email" class="option student-option">Email</option>
                     <option value="nickname" class="option student-option">Nickname</option>
                 </select>`
-                $('#byDiv').html(html)
+                $('#wayDiv').html(html)
                 break
             case 'student':
-                html = `<select id="bySelect" style="border-radius: 3px; width: 100px; height: 34px">
+                html = `<select id="waySelect" style="border-radius: 3px; width: 100px; height: 34px">
                     <option value="email" class="option student-option">Email</option>
                     <option value="nickname" class="option student-option">Nickname</option>
                 </select>`
-                $('#byDiv').html(html)
+                $('#wayDiv').html(html)
                 break
             case 'problem':
-                html = `<select id="bySelect" style="border-radius: 3px; width: 100px; height: 34px">
+                html = `<select id="waySelect" style="border-radius: 3px; width: 100px; height: 34px">
                     <option value="proId" class="option problem-option">Id</option>
                     <option value="keyword" class="option problem-option">Keyword</option>
                     <option value="theme" class="option problem-option">Theme</option>
                 </select>`
-                $('#byDiv').html(html)
+                $('#wayDiv').html(html)
                 break
         }
     });
+    function delete_(role, info) {
+        $.ajax({
+            url: `admin?action=delete&role=${role}&info=${info}`,
+            method: 'GET',
+            contentType: 'json',
+            success: function (res) {
+                if(res.status == 1) {
+                    $('#' + info).remove()
+                    alert(res.msg)
+                } else {
+                    return false
+                }
+            }
+        })
+    }
+
+    function lookAnswer(id) {
+        $.ajax({
+            url: `admin?action=lookAnswer&id=${id}`,
+            method: 'GET',
+            dataType: 'json',
+            success: function (res) {
+                if(res.status == 1) {
+                    let html = ``
+                    for(let i=0; i<res.data.length; i++) {
+                        html += `<p><b>${i+1}</b>:   ${res.data[i]}</p>`
+                    }
+                    $('.modal-body').html(html)
+                } else {
+                    return false
+                }
+
+            }
+        })
+    }
 
 </script>
 </html>
